--- a/public/index.html
+++ b/public/index.html
@@ -1,69 +1,37 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Welcome to Firebase Hosting</title>
-    <style media="screen">
-      body {
-        font-family: Roboto, Arial, sans-serif;
-        background: #ECEFF1;
-        color: rgba(0,0,0,0.87);
-      }
-
-      a {
-        color: rgb(3,155,229);
-      }
-
-      #message {
-        max-width: 400px;
-        margin: 40px auto;
-        box-shadow: 0 1px 3px 0 rgba(0,0,0,0.2),0 1px 1px 0 rgba(0,0,0,0.14),0 2px 1px -1px rgba(0,0,0,0.12);
-        border-radius: 2px;
-        background: white;
-        padding: 16px 24px;
-      }
-
-      #message h1 {
-        font-size: 22px;
-        font-weight: 500;
-        text-align: center;
-        margin: 0 0 16px;
-      }
-
-      #message p {
-        font-weight: 300;
-        line-height: 150%;
-      }
-
-      #message ul {
-        list-style: none;
-        margin: 16px 0 0;
-        padding: 0;
-        text-align: center;
-      }
-
-      #message li a {
-        display: inline-block;
-        padding: 8px;
-        text-transform: uppercase;
-        text-decoration: none;
-        font-weight: 500;
-        background: rgb(3,155,229);
-        color: white;
-        border: 1px solid rgb(3,155,229);
-        border-radius: 3px;
-        font-size: 14px;
-        box-shadow: 0 2px 5px 0 rgba(0,0,0,.26);
-      }
-    </style>
+    <head>
   </head>
   <body>
-    <div id="message">
-      <h1>Welcome to Firebase Hosting</h1>
-      <p>You're seeing this because you've successfully setup Firebase Hosting. Now it's time to go build something extraordinary!</p>
-      <ul>
-        <li><a target="_blank" href="https://firebase.google.com/docs/hosting/">Open Hosting Documentation</a></li>
-      </ul>
-    </div>
+      <span>Analytics Dashboard</span>
+      <section>
+        <span>Total Visitors: <span id="total-visitors"></span></span>
+      </section>
+      <section>
+        <span>Active Visitors</span>
+        <ul id="active-visitors"></ul>
+      </section>
+      <section>
+        <span>Past Visitors</span>
+        <ul id="past-visitors"></ul>
+      </section>
+
+      <script src="https://www.gstatic.com/firebasejs/3.6.0/firebase.js"></script>
+      <script>
+        // Initialize Firebase
+        var config = {
+          apiKey: "AIzaSyBpYuMgwyYfK508bY30HQvufh8I2Sp4-GQ",
+          authDomain: "warm-food-inventory.firebaseapp.com",
+          databaseURL: "https://warm-food-inventory.firebaseio.com",
+          storageBucket: "",
+          messagingSenderId: "631288528625"
+        };
+        firebase.initializeApp(config);
+      </script>
+
+      <script src='https://cdn.firebase.com/js/client/1.1.1/firebase.js'></script>
+      <script src='https://code.jquery.com/jquery-2.1.1.js'></script>
+      <script src='../dashboard.js'></script>
+      <script src='../warm.js'></script>
   </body>
 </html>
