--- a/public/wjklos.html
+++ b/public/wjklos.html
@@ -17,6 +17,10 @@
       </section>
 
       <script src="https://www.gstatic.com/firebasejs/3.6.0/firebase.js"></script>
+      <script src="https://www.gstatic.com/firebasejs/3.6.0/firebase-app.js"></script>
+      <script src="https://www.gstatic.com/firebasejs/3.6.0/firebase-auth.js"></script>
+      <script src="https://www.gstatic.com/firebasejs/3.6.0/firebase-database.js"></script>
+      <script src="https://www.gstatic.com/firebasejs/3.6.0/firebase-messaging.js"></script>
       <script>
         // Initialize Firebase
         var config = {
